--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,700&display=swap');
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+@import url('https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css');
 
 :root {
   --main-bg-color: #dddddd;
