--- a/src/components/Album.css
+++ b/src/components/Album.css
@@ -27,6 +27,10 @@
     text-align: center;
 }
 
+.Album-overlay h4{
+    margin-top: 75px;
+}
+
 .Album:hover .Album-overlay {
     opacity: 0.9;
 }
