--- a/src/components/Toolbar.css
+++ b/src/components/Toolbar.css
@@ -2,8 +2,8 @@
     display: grid;
     width: 100%;
     height: 100%;
-    grid-template-areas: "icon title .";
-    grid-template-columns: 60px 1fr 60px;
+    grid-template-areas: "icon title social";
+    grid-template-columns: 80px 1fr 80px;
     align-items: center;
 }
 
@@ -11,6 +11,7 @@
     background: none;
     border: none;
     cursor: pointer;
+    padding: 0;
 }
 
 .Toolbar button:focus {
@@ -31,7 +32,8 @@
     grid-area: icon;
     display: inline-block;
     vertical-align: center;
-    text-align: center;
+    text-align: left;
+    margin-left: 16px;
 }
 
 .Toolbar-title {
@@ -44,3 +46,14 @@
     width: auto;
     fill: var(--secondary-bg-color);
 }
+
+.Toolbar-social {
+    grid-area: social;
+}
+
+.Toolbar-social i {
+    color:var(--secondary-bg-color);
+    margin: 0 8px;
+    font-size: x-large;
+}
+
