--- a/src/components/Artist.css
+++ b/src/components/Artist.css
@@ -23,9 +23,14 @@
     width: 100%;
     height: 100%;
     background-color: var(--secondary-bg-color);
-    opacity: 0.5;
+    opacity: 0.6;
     color: var(--main-bg-color);
     writing-mode: vertical-rl;
     text-orientation: upright;
     padding-top: 8px;
+    transition: opacity 0.25s;
+}
+
+.Artist-overlay:hover {
+    opacity: 0.4;
 }
