--- a/src/components/Artist.css
+++ b/src/components/Artist.css
@@ -10,6 +10,12 @@
     z-index: 1;
 }
 
+@media screen and (max-width: 720px) {
+    .Artist:hover {
+        width: 200px;
+    }
+}
+
 .Artist img {
     object-fit: cover;
     width: 100%;
