Added album grid to individual artist pages

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   --main-bg-color: #dddddd;
   --secondary-bg-color: #222222;
   --highlight-color: khaki;
+  --highlight-inverse-color: #9d91c3;
 }
 
 .App {
